locations endpoint
