# build/swagger.json
@@ -6,37 +6,236 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"Location": {
+			"Address": {
 				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
+					"addressLine1": {
+						"type": "string"
 					},
-					"name": {
+					"city": {
+						"type": "string"
+					},
+					"state": {
+						"type": "string"
+					},
+					"zipCode": {
+						"type": "string"
+					},
+					"county": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"id",
+					"addressLine1",
+					"city",
+					"state",
+					"zipCode",
+					"county"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Geolocation": {
+				"properties": {
+					"latitude": {
+						"type": "number",
+						"format": "double"
+					},
+					"longitude": {
+						"type": "number",
+						"format": "double"
+					},
+					"latLng": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"latitude",
+					"longitude",
+					"latLng"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Hours": {
+				"properties": {
+					"open": {
+						"type": "string"
+					},
+					"close": {
+						"type": "string"
+					},
+					"open24": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"open",
+					"close",
+					"open24"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LocationHours": {
+				"properties": {
+					"timezone": {
+						"type": "string"
+					},
+					"gmtOffset": {
+						"type": "string"
+					},
+					"open24": {
+						"type": "boolean"
+					},
+					"monday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"tuesday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"wednesday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"thursday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"friday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"saturday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"sunday": {
+						"$ref": "#/components/schemas/Hours"
+					}
+				},
+				"required": [
+					"timezone",
+					"gmtOffset",
+					"open24",
+					"monday",
+					"tuesday",
+					"wednesday",
+					"thursday",
+					"friday",
+					"saturday",
+					"sunday"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DepartmentHours": {
+				"properties": {
+					"open24": {
+						"type": "boolean"
+					},
+					"monday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"tuesday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"wednesday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"thursday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"friday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"saturday": {
+						"$ref": "#/components/schemas/Hours"
+					},
+					"sunday": {
+						"$ref": "#/components/schemas/Hours"
+					}
+				},
+				"required": [
+					"open24",
+					"monday",
+					"tuesday",
+					"wednesday",
+					"thursday",
+					"friday",
+					"saturday",
+					"sunday"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Department": {
+				"properties": {
+					"departmentId": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"hours": {
+						"$ref": "#/components/schemas/DepartmentHours"
+					},
+					"phone": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"departmentId",
 					"name"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_Location.name_": {
+			"Location": {
 				"properties": {
+					"locationId": {
+						"type": "string"
+					},
+					"storeNumber": {
+						"type": "string"
+					},
+					"divisionNumber": {
+						"type": "string"
+					},
+					"chain": {
+						"type": "string"
+					},
+					"address": {
+						"$ref": "#/components/schemas/Address"
+					},
+					"geolocation": {
+						"$ref": "#/components/schemas/Geolocation"
+					},
 					"name": {
 						"type": "string"
+					},
+					"hours": {
+						"$ref": "#/components/schemas/LocationHours"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"departments": {
+						"items": {
+							"$ref": "#/components/schemas/Department"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
-					"name"
+					"locationId",
+					"storeNumber",
+					"divisionNumber",
+					"chain",
+					"address",
+					"geolocation",
+					"name",
+					"hours",
+					"phone",
+					"departments"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"LocationCreationParams": {
-				"$ref": "#/components/schemas/Pick_Location.name_"
+				"additionalProperties": false
 			},
 			"Product": {
 				"properties": {
@@ -149,14 +348,17 @@
 	"paths": {
 		"/locations": {
 			"get": {
-				"operationId": "GetLocation",
+				"operationId": "GetLocations",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Location"
+									"items": {
+										"$ref": "#/components/schemas/Location"
+									},
+									"type": "array"
 								}
 							}
 						}
@@ -164,26 +366,6 @@
 				},
 				"security": [],
 				"parameters": []
-			},
-			"post": {
-				"operationId": "CreateLocation",
-				"responses": {
-					"201": {
-						"description": "Created"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/LocationCreationParams"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/products/{productId}": {
